--- a/src/js/gridPaginator.html
+++ b/src/js/gridPaginator.html
@@ -1,4 +1,4 @@
-<div pagination ng-if="paginationOptions.totalItems  > paginationOptions.itemsPerPage"
+<div uib-pagination ng-if="paginationOptions.totalItems  > paginationOptions.itemsPerPage"
      total-items="paginationOptions.totalItems"
      ng-model="paginationOptions.currentPage"
      ng-change="reloadGrid()"
