--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Angular Data Grid</h1>
 
-        <div class="row" ng-if="dataLoaded">
+        <div class="row">
             <div class="col-xs-12">
                 <div class="col-md-3">
                     <div class="form-group">
