--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
     <div class="container">
         <h1>Angular Data Grid</h1>
-
+        <div class="b-change-theme">
+            <span class="b-change-theme__link _active">Bootstrap</span>
+            <a href="demo/index.html" class="b-change-theme__link">Material Design</a>
+        </div>
         <div class="row">
             <div class="col-xs-12">
                 <div class="col-md-3">
