--- a/index.html
+++ b/index.html
@@ -128,10 +128,21 @@
                         </tr>
                         </thead>
                         <tbody>
+                        <!--<tr grid-item>-->
+                            <!--<td>-->
+                                <!--<a ng-bind="item.code"></a>-->
+                            <!--</td>-->
+                            <!--<td ng-bind="item.placed | date:'MM/dd/yyyy'"></td>-->
+                            <!--<td ng-bind="item.purchaseOrderNumber"></td>-->
+                            <!--<td ng-bind="item.statusDisplay"></td>-->
+                            <!--<td ng-bind="item.total.formattedValue"></td>-->
+                            <!--<td>-->
+                                <!--View Order-->
+                            <!--</td>-->
+                        <!--</tr>-->
                         <tr grid-item>
                             <td>
-                                <a href="{{globalData.contextPath + '/my-account/order/' + item.code}}"
-                                   ng-bind="item.id"></a>
+                                <a ng-bind="item.code"></a>
                             </td>
                             <td ng-bind="item.placed | date:'MM/dd/yyyy'"></td>
                             <td ng-bind="item.purchaseOrderNumber"></td>
