--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
                                         ng-model="status"
                                         ng-change="filter()">
                                     <option value="">All Statuses</option>
+                                    <option ng-repeat="option in statusOptions track by option.value"
+                                            value="{{option.value}}">{{option.text}}</option>
                                 </select>
                             </th>
                             <th sortable='total.value' class="sortable">
@@ -166,8 +168,11 @@
 </div>
 </body>
 
-<!--<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>-->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
 <script src="dist/pagination.min.js"></script>
 <script src="dist/dataGrid.min.js"></script>
 <script src="demo/demoApp.js"></script>
