--- a/index.html
+++ b/index.html
@@ -128,21 +128,9 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <!--<tr grid-item>-->
-                            <!--<td>-->
-                                <!--<a ng-bind="item.code"></a>-->
-                            <!--</td>-->
-                            <!--<td ng-bind="item.placed | date:'MM/dd/yyyy'"></td>-->
-                            <!--<td ng-bind="item.purchaseOrderNumber"></td>-->
-                            <!--<td ng-bind="item.statusDisplay"></td>-->
-                            <!--<td ng-bind="item.total.formattedValue"></td>-->
-                            <!--<td>-->
-                                <!--View Order-->
-                            <!--</td>-->
-                        <!--</tr>-->
                         <tr grid-item>
                             <td>
-                                <a ng-bind="item.code"></a>
+                                <span ng-bind="item.code"></span>
                             </td>
                             <td ng-bind="item.placed | date:'MM/dd/yyyy'"></td>
                             <td ng-bind="item.purchaseOrderNumber"></td>
