removing CNAME and redirect to demo page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="container" ng-app="myApp" ng-controller="myAppController" ng-cloak>
 
     <div class="container">
-        <h1>Angular Data Grid <a href="demo/test.html">Go to test page</a></h1>
+        <h1>Angular Data Grid</h1>
 
         <div class="row" ng-if="dataLoaded">
             <div class="col-xs-12">
