--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <span class="navbar-brand">Angular Data Grid &mdash; Bootstrap</span>
         <ul class="nav navbar-nav pull-right">
             <li class="dropdown" style="position: relative;">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Change theme <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                   aria-expanded="false">Change theme <span class="caret"></span></a>
                 <ul class="dropdown-menu dropdown-menu-right">
                     <li>
                         <a href="index.html">Bootstrap</a>
@@ -27,7 +28,7 @@
 </nav>
 <div class="container">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
             <input type="text" class="form-control order-search-box"
                    placeholder="Search By Order #"
                    ng-change="gridActions.filter()"
@@ -35,62 +36,59 @@
                    filter-by="code"
                    filter-type="text">
         </div>
-        <div class="col-md-9">
-            <div class="form-inline margin-bottom-small">
-                <div class="form-group">
-                    <label class="control-label">From: </label>
-
-                    <div class="input-group datepicker">
-                        <input type="text"
-                               id="dateFrom"
-                               class="form-control"
-                               is-open="dateFromOpened"
-                               ng-click="dateFromOpened = true"
-                               datepicker-popup="shortDate"
-                               filter-by="placed"
-                               filter-type="dateFrom"
-                               ng-model="dateFrom"
-                               ng-blur="gridActions.filter()"
-                               ng-focus="gridActions.filter()"
-                               max-date="dateTo"
-                               show-weeks="false"
-                               close-text="Close"
-                               placeholder="MM/DD/YY"/>
-                    <span class="input-group-btn">
-                    <label for="dateFrom" class="btn btn-default form-control">
-                        <i class="fa fa-calendar"></i></label>
-                    </span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">To: </label>
-
-                    <div class="input-group datepicker">
-                        <input type="text"
-                               id="dateTo"
-                               class="form-control"
-                               is-open="dateToOpened"
-                               ng-click="dateToOpened = true"
-                               min-date="dateFrom"
-                               datepicker-popup="shortDate"
-                               filter-by="placed"
-                               filter-type="dateTo"
-                               ng-model="dateTo"
-                               ng-blur="gridActions.filter()"
-                               ng-focus="gridActions.filter()"
-                               show-weeks="false"
-                               close-text="Close"
-                               placeholder="MM/DD/YY"/>
-                        <span class="input-group-btn">
-                        <label for="dateTo" class="btn btn-default form-control">
-                            <i class="fa fa-calendar"></i></label>
-                        </span>
-                    </div>
-                </div>
-            </div>
+        <div class="col-md-4">
+            <p class="input-group">
+                <input type="text"
+                       class="form-control"
+                       uib-datepicker-popup="{{format}}"
+                       min-date="dateFrom"
+                       max-date="dateTo"
+                       close-text="Close"
+                       ng-model="dateFrom"
+                       show-weeks="true"
+                       is-open="dateFromOpened"
+                       ng-click="dateFromOpened = true"
+                       filter-by="placed"
+                       filter-type="dateFrom"
+                       placeholder="From"
+                       ng-blur="gridActions.filter()"
+                       ng-focus="gridActions.filter()"
+                       show-weeks="false"
+                       close-text="Close"/>
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open($event)"><i
+                    class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+            </p>
             <div ng-show="dateTo || dateFrom" class="buttons-right">
                 <a href="" ng-click="dateTo = ''; dateFrom = ''; reloadGrid();">Clear Dates</a>
             </div>
+        </div>
+        <div class="col-md-4">
+            <p class="input-group">
+                <input type="text"
+                       class="form-control"
+                       uib-datepicker-popup="{{format}}"
+                       min-date="dateFrom"
+                       max-date="dateTo"
+                       close-text="Close"
+                       ng-model="dateTo"
+                       show-weeks="true"
+                       is-open="dateToOpened"
+                       ng-click="dateToOpened = true"
+                       filter-by="placed"
+                       filter-type="dateTo"
+                       placeholder="To"
+                       ng-blur="gridActions.filter()"
+                       ng-focus="gridActions.filter()"
+                       show-weeks="false"
+                       close-text="Close">
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="open($event)">
+                        <i class="glyphicon glyphicon-calendar"></i>
+                    </button>
+                </span>
+            </p>
         </div>
     </div>
     <div class="row">
@@ -100,7 +98,6 @@
                     <strong class="col-md-12">
                         found : {{filtered.length}} items
                     </strong>
-
                 </div>
                 <table class="table table-hover table-leo table-condensed table-bordered table-striped">
                     <thead>
@@ -119,7 +116,8 @@
                                     ng-change="filter()">
                                 <option value="">All Statuses</option>
                                 <option ng-repeat="option in statusOptions track by option.value"
-                                        value="{{option.value}}">{{option.text}}</option>
+                                        value="{{option.value}}">{{option.text}}
+                                </option>
                             </select>
                         </th>
                         <th sortable='total.value' class="sortable">
@@ -139,24 +137,24 @@
                     </tbody>
                 </table>
                 <div class="row text-center">
-                    <pagination max-size="5"
-                                boundary-links="true"
-                                class="pagination-sm"
-                                ng-if="paginationOptions.totalItems  > paginationOptions.itemsPerPage"
-                                total-items="paginationOptions.totalItems"
-                                ng-model="paginationOptions.currentPage"
-                                ng-change="reloadGrid()"
-                                items-per-page="paginationOptions.itemsPerPage"></pagination>
+                    <grid-pagination max-size="5"
+                                     boundary-links="true"
+                                     class="pagination-sm"
+                                     ng-if="paginationOptions.totalItems  > paginationOptions.itemsPerPage"
+                                     total-items="paginationOptions.totalItems"
+                                     ng-model="paginationOptions.currentPage"
+                                     ng-change="reloadGrid()"
+                                     items-per-page="paginationOptions.itemsPerPage"></grid-pagination>
                 </div>
                 <div class="row text-center">
-                    <pagination max-size="5"
-                                boundary-links="true"
-                                class="pagination-sm"
-                                ng-if="paginationOptions.totalItems  > paginationOptions.itemsPerPage"
-                                total-items="paginationOptions.totalItems"
-                                ng-model="paginationOptions.currentPage"
-                                ng-change="reloadGrid()"
-                                items-per-page="paginationOptions.itemsPerPage"></pagination>
+                    <grid-pagination max-size="5"
+                                     boundary-links="true"
+                                     class="pagination-sm"
+                                     ng-if="paginationOptions.totalItems  > paginationOptions.itemsPerPage"
+                                     total-items="paginationOptions.totalItems"
+                                     ng-model="paginationOptions.currentPage"
+                                     ng-change="reloadGrid()"
+                                     items-per-page="paginationOptions.itemsPerPage"></grid-pagination>
                 </div>
                 <div class="row text-center">
                     <div grid-item-per-page="10, 25, 50, 75" class="pagination-sm"></div>
@@ -170,6 +168,7 @@
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
